# flask-app-gunicorn

./: .env  Dockerfile  gunicorn_config.py  main.py  pyproject.toml
